<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/header_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:paddingRight="5dp">

                    <TextView
                        android:id="@+id/titleTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/redressed"
                        android:includeFontPadding="false"
                        android:text="@string/app_name"
                        android:textColor="@color/primary_color"
                        android:textSize="30dp" />

                    <LinearLayout
                        android:id="@+id/layoutIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/iconSearch"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:layout_marginHorizontal="5dp"
                            android:background="@color/white"
                            android:contentDescription="@string/search"
                            android:src="@drawable/ic_search"
                            app:tint="@color/grey" />

                        <ImageButton
                            android:id="@+id/iconNotification"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:background="@color/white"
                            android:contentDescription="@string/notification"
                            android:src="@drawable/ic_notification"
                            app:tint="@color/grey" />

                    </LinearLayout>
                </RelativeLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabCradleMargin="20dp"
        app:fabCradleRoundedCornerRadius="20dp"
        app:fabCradleVerticalOffset="10dp">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            app:menu="@menu/bottom_nav_menu"
            android:layout_marginRight="16dp" />
    </com.google.android.material.bottomappbar.BottomAppBar>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/ic_menubar_add"-->
<!--        app:layout_anchor="@id/bottom_app_bar"-->
<!--        app:tint="@color/white"-->
<!--        />-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>