<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_menu.HomeFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                app:layout_collapseMode="parallax">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp">

                    <TextView
                        android:layout_width="90dp"
                        android:layout_height="100dp"
                        android:layout_marginTop="25dp"
                        android:background="@drawable/bg_story"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/create_story_str"
                        android:textColor="@color/black"
                        android:textSize="13sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/avt_user"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/primary_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lvStory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingVertical="15dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/newsfeed"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    style="?attr/materialButtonStyle"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/follow"
                    android:textColor="@color/primary_color"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    style="?attr/materialButtonOutlinedStyle"
                    app:strokeColor="@color/primary_color"
                    />
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lvFeedNews"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
</LinearLayout>

</ScrollView>