<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_newsfeed"
    android:orientation="vertical"
    android:paddingVertical="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avtUser"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user3" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/timeUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false"
                android:text="@string/app_name"
                android:textColor="@color/time_color"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@color/white"
            android:contentDescription="@string/more_option"
            android:src="@drawable/ic_more" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/titleStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:includeFontPadding="false"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:includeFontPadding="false"
                android:paddingTop="5dp"
                android:text="@string/material_food"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/materialFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:paddingTop="5dp"
                android:text="sadjsbdksgjagjsasjsasjsajsjsajj"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/moreContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:includeFontPadding="false"
                android:paddingTop="5dp"
                android:text="@string/more_content"
                android:textColor="@color/primary_color"
                android:textSize="15sp" />
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            />
        <ImageView
            android:id="@+id/imageView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/mon2"/>
        <ImageButton
            android:id="@+id/nextImageBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_next_image"
            android:background="@android:color/transparent"
            android:layout_gravity="right|center_vertical"
            />
        <ImageButton
            android:visibility="gone"
            android:id="@+id/prevImageBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_prev_image2"
            android:background="@android:color/transparent"
            android:layout_gravity="left|center_vertical"
            />
        <TextView
            android:id="@+id/pagingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1/4"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/white"
            android:paddingHorizontal="15dp"
            android:paddingVertical="5dp"
            android:background="@drawable/bg_paging_image_food"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:paddingHorizontal="5dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <ImageView
            android:id="@+id/loveBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_love"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:paddingHorizontal="5dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="16sp"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_comment"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/ic_share"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4.5"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_round_star_24"/>
    </LinearLayout>
</LinearLayout>